Notification-MS-Deployment.yaml
# NotificationMicroservice-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-microservice
  labels:
    app: notification-restapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-restapp
  template:
    metadata:
      labels:
        app: notification-restapp
    spec:
      containers:
        - name: notification-service
          image: stacksimplify/kube-notifications-microservice:1.0.0
          ports:
            - containerPort: 8096
          imagePullPolicy: Always
