MySQL-ExternalName-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql

spec:
  type: ExternalName
  externalName: mgmtdb.chi680k06fii.ap-northeast-2.rds.amazonaws.com
  #Add RDS Endpoints
