Notification-MS-ClusterIP-Service.yaml
#Notification-Microservice-ClusterIP-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-clusterip-service
  labels:
    app: notification-restapp
spec:
  type: ClusterIP
  selector:
    app: notification-restapp
  ports:
  - port: 8096
    targetPort: 8096
